--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,5 +1,18 @@
 name: Build and Push Docker Image
 
+on: [push, pull_request]
+
+permissions:
+  id-token: write
+  contents: read
+
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      # your build + login steps that use OIDC...
 on:
   push:
     branches:
@@ -23,6 +36,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+      
 
     steps:
       - name: Checkout repository
