--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,18 +1,5 @@
 name: Build and Push Docker Image
 
-on: [push, pull_request]
-
-permissions:
-  id-token: write
-  contents: read
-
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      # your build + login steps that use OIDC...
 on:
   push:
     branches:
@@ -26,6 +13,11 @@ on:
       - master
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+  packages: write
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
@@ -33,11 +25,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-      
-
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -46,6 +34,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Container Registry
+      # Only log in when not PR
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
